cabal-version: 2.2

name: signers-report
version: 2021

build-type: Simple

executable capital
  build-depends:
    aeson,
    base,
    bytestring,
    Chart,
    Chart-cairo,
    colour,
    containers,
    data-default,
    lens,
    wreq,
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    StrictData
  default-language: Haskell2010
  main-is: Main.hs
