cabal-version: 2.2

name: signers-report
version: 2021

build-type: Simple

executable capital
  build-depends:
    aeson,
    base,
    bytestring,
    Chart,
    Chart-cairo,
    colour,
    containers,
    data-default,
    lens,
    wreq,
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DisambiguateRecordFields
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeApplications
  default-language: Haskell2010
  main-is: Main.hs
